[package]
name = 'crypto'
version = '6.7.0-beta2'
license = 'Apache-2.0'
edition = '2021'
authors = ['Rivtower Technologies <contact@rivtower.com>']

[dependencies]
tonic = '0.9'
prost = '0.11'
hex = '0.4'
tower = '0.4'
lazy_static = '1.4'
rayon = '1.7'
serde = '1.0'
serde_derive = '1.0'
tracing = '0.1'
cloud-util = '=0.7.0-beta2'
cita_cloud_proto = '=6.7.0-beta2'

[dependencies.clap]
version = '4.2'
features = ['derive']

[dependencies.tokio]
version = '1.27'
features = ['full']

[dependencies.tiny-keccak]
version = '2.0'
features = ['keccak']

[dependencies.secp256k1]
version = '0.27'
features = [
    'rand',
    'recovery',
]

[dev-dependencies]
rand = '0.8'
[profile.release]
debug = 1
[profile.release.package."*"]
debug = 0
