[package]
name = "crypto"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.38", features = ["full"] }
hex = "0.4"
tower = "0.4"
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = {version = "0.29", features = ["rand", "recovery"]}
lazy_static = "1.5"
rayon = "1.10"
serde = "1.0"
serde_derive = "1.0"
tracing = "0.1"

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }

[dev-dependencies]
rand = "0.8" # must be match deps of secp256k1

[profile.release.package."*"]
# Set the default for dependencies.
debug = 0

[profile.release]
# Add debug info -- line tables only
debug = 1
